HEAD
	+ Added stats for automatic upgrades. Currently, the timestamp and
	  the number of automatic upgraded packages
	+ Reviewed installation slides text
2.0.10
	+ Do not show system updates in Zentyal UI when there are not
	  available because of our QA updates
	+ Fix bug when removing QA updates in preferences file
2.0.9
	+ Safer regexes in ebox-update-packages and ebox-remove-packages
	+ Do not ignore kernel packages in system updates
2.0.8
	+ Open and close write fifos only one time and autoflush them
	+ Avoid sending duplicated lines to the fifos
2.0.7
	+ New APT log at /var/log/ebox/software.log to diagnose problems
	+ CGI to download software.log from the error page
	+ Handle SIGPIPE in ebox-apt-remove
	+ Delete /var/lib/ebox/dpkg_running inupdate and remove scripts
	+ Handle possible errors opening write fifo
2.0.6
	+ Always regenerate APT cache for installing or upgrading
	+ Do not download all the packages, just download needed ones
2.0.5
	+ Improved performance using global package cache
	+ Show a helpful page if there are half-installed packages
2.0.4
	+ Fixed defunct process due to uncaught SIGPIPE
	+ Always end safely the installation of packages regardless of any
	  error
	+ Wait for the child ending when installing packages
	+ Include as Zentyal component the ones that start with "zentyal-"
2.0.3
	+ Do not check archive if the version list if it was installed
	  manually or the archive is missing (Fixed a warning)
	+ Fixed a bug in error management in ebox-apt-update and
	  ebox-update-packages scripts
	+ Fixed bug setting automatic time
2.0.2
	+ Use icons for Security and QA updates in System updates
	  (libebox >= 2.0.3)
	+ Bugfix: Do not show + icon in system updates if there is not
	  changelog entry
	+ Bugfix: When QA is enabled and exclusive, do not show not qa
	  packages to upgrade
	+ Bugfix: Zentyal components to update based on QA data as well
	+ Bugfix: Return right properties for security and QA when available